fea-rs/test-data/compile-tests/mini-latin/bad/languagesystem_order2.fea
languagesystem DFLT dflt;
languagesystem latn dflt;
languagesystem DFLT autr;
